--- a/src/main/resources/assets/manavisualizer/lang/en_us.json
+++ b/src/main/resources/assets/manavisualizer/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.manavisualizer.manareader": "Mana Reader",
   "itemGroup.manatab": "Mana Visualizer",
   "item.manareader.info": "Mana Level: %s/%s",
+  "item.manareader.info.short": "Mana Level: %s",
+  "item.manareader.info.needed": "Mana Level: %s # Needed: %s",
   "item.manareader.tooltip": "Right click on mana pool or mana generating flower to see how much it is full in numbers."
 }
