--- a/src/main/resources/assets/manavisualizer/lang/en_us.json
+++ b/src/main/resources/assets/manavisualizer/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "item.manavisualizer.manareader": "Mana Reader",
-  "itemGroup.manatab": "Mana Visualizer",
+  "creativetab.manatab": "Mana Visualizer",
   "item.manareader.info": "Mana Level: %s/%s",
   "item.manareader.info.short": "Mana Level: %s",
   "item.manareader.tooltip": "Right click on mana pool or mana generating flower to see how much it is full in numbers."
